# MCP-Unity-Mehrdad

./: .gitignore  README.md
.claude/: settings.local.json
server/: pyproject.toml  setup.ps1  setup.sh
server/src/unity_mcp/: __init__.py  exceptions.py  server.py  unity_client.py
server/src/unity_mcp/tools/: __init__.py
server/tests/: test_framing.py
unity-package/: package.json
unity-package/Editor/: UnityMCP.Editor.asmdef
unity-package/Editor/Core/: BatchExecutor.cs  CommandRouter.cs  CompileWatcher.cs  MCPBridge.cs  MCPMenu.cs  MainThreadDispatcher.cs  RequestLog.cs
unity-package/Editor/Handlers/: HandlerBase.cs  IHandler.cs
unity-package/Editor/Handlers/V1/: AddressablesHandler.cs  AnimationHandler.cs  AssetHandler.cs  AudioHandler.cs  BuildHandler.cs  CaptureHandler.cs  CinemachineHandler.cs  ComponentHandler.cs  ConsoleHandler.cs  EditorHandler.cs  EditorWindowHandler.cs  GameObjectHandler.cs  InputHandler.cs  LightingHandler.cs  LocalizationHandler.cs  MaterialHandler.cs  PackageHandler.cs  ParticlesHandler.cs  PhysicsHandler.cs  PrefabHandler.cs  SceneHandler.cs  ScriptHandler.cs  ScriptableObjectHandler.cs  SpriteHandler.cs  TestHandler.cs  TilemapHandler.cs  TimelineHandler.cs  UIHandler.cs  UIToolkitHandler.cs
unity-package/Editor/Protocol/: ErrorCodes.cs  HandlerException.cs  Request.cs  Response.cs
unity-package/Editor/UI/: MCPControlPanel.cs
unity-package/Editor/Utils/: AssetUtil.cs  ConsoleLogReader.cs  Framing.cs  ObjectFinder.cs  TypeResolver.cs  ValueParser.cs
